// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  line-height: inherit;
}

<span
  class="c0"
  style="color:orange;font-size:16px"
>
  Hello, world!
</span>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  line-height: 2;
}

<span
  class="c0"
  style="color:orange;font-size:16px"
>
  Hello, world!
</span>
`;
